--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
             </div>
 
             <div class="referrer-buttons">
-                <p>: Referrer اختر</p>
+                <p>: اختر أحد الآتية </p>
                 <button type="button" class="referrer-btn" data-referrer="https://www.joacademy.com/">joacademy</button>
                 <button type="button" class="referrer-btn" data-referrer="https://hisas.online/">hisas online</button>
             </div>
